# fizzy

./: .bumpversion.cfg  CHANGELOG.md  CMakeLists.txt  circle.yml
bindings/rust/src/: lib.rs
bindings/sys/: Cargo.toml  build.rs  fizzy.h
bindings/sys/src/: lib.rs
cmake/: ProjectUVWASI.cmake  ProjectWabt.cmake
include/fizzy/: fizzy.h
lib/fizzy/: CMakeLists.txt  capi.cpp  execute.cpp  instantiate.cpp
lib/fizzy/cxx20/: numeric.hpp
test/: CMakeLists.txt
test/benchmarks/: guido-fuzzer-find-1.inputs
test/fuzzer/: CMakeLists.txt
test/spectests/: spectests.cpp
test/unittests/: CMakeLists.txt  capi_test.cpp  execute_call_test.cpp  execute_test.cpp
test/utils/: CMakeLists.txt  fizzy_engine.cpp  wabt_engine.cpp
tools/wasi/: CMakeLists.txt  wasi.cpp
