# Fizzy: A fast WebAssembly interpreter
# Copyright 2019-2020 The Fizzy Authors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fizzy-sys"
version = "0.4.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/fizzy-rs"
description = "Bindings to Fizzy (low-level)"
categories = ["external-ffi-bindings"]
edition = "2018"

[build-dependencies]
bindgen = "0.54.0"
